--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -12,9 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
         crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
-  
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
-
+        <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
     {% block stylesheets %}
     <link rel="stylesheet" href="{{asset('build/js/app.css')}}">
     {% endblock %}
@@ -42,16 +40,16 @@
                 <a href="{{path('admin.evenement.index')}}" class="list-group-item text-center {% if current==5 %}active{% endif %}">
                     <i class="fas fa-clipboard-list fa-2x"></i><br/>Evenements
                 </a>
-                <a href="#" class="list-group-item text-center {% if current==6 %}active{% endif %}">
+                <a href="{{path('show_gallery')}}" class="list-group-item text-center {% if current==6 %}active{% endif %}">
                     <i class="fas fa-images fa-2x"></i><br/>Gallery
                 </a>
-                <a href="#" class="list-group-item text-center {% if current==7 %}active{% endif %}">
+                <a href="{{path('admin.message.index')}}" class="list-group-item text-center {% if current==7 %}active{% endif %}">
                     <i class="fas fa-envelope fa-2x"></i><br/>Messages
                 </a>
                 <a href="#" class="list-group-item text-center">
                     <i class="fas fa-chart-pie fa-2x"></i><br/>Statistiques
                 </a>
-                <a href="#" class="list-group-item text-center">
+                <a href="{{path('specialite')}}" class="list-group-item text-center">
                     <i class="fas fa-cog fa-2x"></i><br/>Option
                 </a>
             </div>
