--- a/templates/admin/option/index.html.twig
+++ b/templates/admin/option/index.html.twig
@@ -7,26 +7,6 @@
         <h1 class="center-align  "><i class="fas fa-cog"></i> Option </h1>
     </div>
 </div>
-   <div class="col-lg-5 col-s1 " style="margin-top:32px;margin-bottom:20px" id="button-add">
-            <button class="btn btn-light ">
-              <i id="btn-slide" class="fas fa-chevron-down" style="padding-right:10px;"></i> ajouter une spécialité
-            </button>
-        </div>
-<div class="col-lg-11" id="hide">
-    {{ form_start(form) }}
-    <div class="row form-group">
-        <div class=" col-lg-2 col-s2 mr-2 ">
-            {{ form_row(form.name) }}
-        </div>
-        {{ form_end(form)}}
-         <div class="col-lg-5 col-s1 " style="margin-top:32px">
-            <admin class="btn btn-success" id="ajout">
-            <i class="fas fa-plus" style="padding-right:5px;"></i> Ajouter
-            </a>
-        </div>
-    </div>
-</div>
-
 <div class="container-fluid ">
     <table class="table table-striped" id="table">
         <thead>
@@ -39,7 +19,7 @@
         </thead>
         <tbody>
 
-            {% for specialite in specliates %}
+            {% for specialite in specialites %}
             <tr>
                 <td>{{ specialite.id }}</td>
                 <td>{{ specialite.name }}</td>
