--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -46,10 +46,10 @@
                 <a href="{{path('admin.message.index')}}" class="list-group-item text-center {% if current==7 %}active{% endif %}">
                     <i class="fas fa-envelope fa-2x"></i><br/>Messages
                 </a>
-                <a href="{{path('formation')}}" class="list-group-item text-center">
+                <a href="{{path('formation')}}" class="list-group-item text-center {% if current==8 %}active{% endif %}">
                     <i class="fas fa-chart-pie fa-2x"></i><br/>Formations
                 </a>
-                <a href="{{path('specialite')}}" class="list-group-item text-center {% if current==8 %}active{% endif %}">
+                <a href="{{path('specialite')}}" class="list-group-item text-center {% if current==9 %}active{% endif %}">
                     <i class="fas fa-cog fa-2x"></i><br/>Option
                 </a>
             </div>
