--- a/templates/admin/option/formation/index.html.twig
+++ b/templates/admin/option/formation/index.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
 <div class="row">
     <div class="col-md-4">
-        <h1 class="center-align  "><i class="fas fa-cog"></i> Option </h1>
+        <h1 class="center-align  "><i class="fas fa-cog"></i> Formations </h1>
     </div>
 </div>
    <div class="col-lg-5 col-s1 " style="margin-top:32px;margin-bottom:20px" id="button-add">
