--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -41,7 +41,7 @@
                     <i class="fas fa-clipboard-list fa-2x"></i><br/>Evenements
                 </a>
                 <a href="{{path('show_gallery')}}" class="list-group-item text-center {% if current==6 %}active{% endif %}">
-                    <i class="fas fa-images fa-2x"></i><br/>Gallery
+                    <i class="fas fa-images fa-2x"></i><br/>Galerie
                 </a>
                 <a href="{{path('admin.message.index')}}" class="list-group-item text-center {% if current==7 %}active{% endif %}">
                     <i class="fas fa-envelope fa-2x"></i><br/>Messages
