--- a/templates/admin/gallery/index.html.twig
+++ b/templates/admin/gallery/index.html.twig
@@ -4,15 +4,21 @@
 {% block body %}
 <div class="row">
     <div class="col-md-4">
-        <h1 class="center-align  "><i class="fas fa-images"></i> Gérer le Gallery </h1>
+        <h1 class="center-align  "><i class="fas fa-images"></i> Gérer l'album photo 
+        <a href="{{ path('show_view')}}" class="btn btn-info"><i class="fas fa-eye"
+                           ></i></a>
+ </h1>
     </div>
 </div>
  {% for message in app.flashes('success') %}
     <div class="alert alert-success"id="successMessage">{{ message }}</div>
     {% endfor %}
 
+
+
+<!-- Modal -->
 <div class="container-fluid " >
-   
+  
     <a href="{{ path('add_image') }}" class="btn btn-primary mb-3"><i class="fas fa-image" style="padding-right:10px;"></i>Ajouter une photo</a>
     <table class="table table-striped" >
         <thead>
